version/0.31/_sources/api/solver/_autosummary/settings/set_one_to_one_pairing_tolerance.rst.txt
:orphan:

.. _set_one_to_one_pairing_tolerance:

set_one_to_one_pairing_tolerance
================================

.. autoclass:: ansys.fluent.core.generated.solver.settings_251.set_one_to_one_pairing_tolerance
    :show-inheritance:

.. rubric:: Arguments

==================================================   ===================================================

Argument                                                                                         Summary

==================================================   ===================================================
:ref:`adjustable_tolerance <adjustable_tolerance>`       Enable/disable one-to-one adjustable tolerance.

:ref:`length_factor <length_factor>`                                 The valid number for length factor.

==================================================   ===================================================

.. rubric:: Included in:

==================================   ========================

Parent                                                Summary

==================================   ========================
:ref:`auto_options <auto_options>`       Auto-options object.

==================================   ========================

